--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,9 @@ ul{
 body{
     font-family: sans-serif;
     margin: 0;
+    max-width: 1440px;
+    margin-inline: auto;
+    background-color: #4ABDF2;
 }
 
 
@@ -170,6 +173,7 @@ font-size: 15px;
 
 .main{
     width: 375px;
+    background-color: white;
 }
 
 @media screen and (width>786px) {
